# nhoa_bt

./: README.md
nhoa_bt/: CMakeLists.txt  Dockerfile  docker-compose.yaml  package.xml
nhoa_bt/.xauth_docker/config/: set_xauth_for_docker.sh
nhoa_bt/include/bt_action_nodes_h/: CancelActionApproachNavigation.h  CancelNavigationGoal.h  CheckSmileScore.h  DrawUserAttention.h  ExecuteConversation.h  ExecuteGUI.h  ExecuteHeadMotion.h  ExecuteMotion.h  ExecuteNavigation.h  ExecuteUperbodyMotion.h  ExecuteVoiceCmd.h  UploadUserInput.h
nhoa_bt/include/bt_condition_nodes_h/: ConditionNodeFrame.h  IsApproximationReached.h  IsBottleOnTable.h  IsQuestionnaireRequested.h  IsUserAnswered.h  IsUserDetected.h  IsUserEngaged.h  IsUserEngaging.h  IsUserSat.h  IsUserSeated.h  conditionNodeFrame.h
nhoa_bt/include/nhoa_bt/: handle_gui.h  handle_hri.h  handle_scene.h  handle_voice.h  plan_head_motion.h  plan_motion.h  plan_navigation.h  plan_voice_cmd.h
nhoa_bt/include/nhoa_bt/BT_XML/: NHoAConversationDemoBT.xml  NHoADemoBT.xml  NHoADemoBTGroot.xml  NHoADemoBT_palette.xml
nhoa_bt/launch/: nhoa_bt_conversation_demo.launch  nhoa_bt_demo.launch  nhota_demo_bt.launch
nhoa_bt/src/: handle_gui.cpp  handle_hri.cpp  handle_scene.cpp  handle_voice.cpp  nhoa_bt_conversation_demo.cpp  nhoa_bt_demo.cpp  plan_head_motion.cpp  plan_motion.cpp  plan_navigation.cpp  plan_voice_cmd.cpp
nhoa_bt/src/bt_action_nodes/: CancelActionApproachNavigation.cpp  CancelNavigationGoal.cpp  CheckSmileScore.cpp  DrawUserAttention.cpp  ExecuteConversation.cpp  ExecuteGUI.cpp  ExecuteHeadMotion.cpp  ExecuteMotion.cpp  ExecuteNavigation.cpp  ExecuteUperbodyMotion.cpp  ExecuteVoiceCmd.cpp  UploadUserInput.cpp
nhoa_bt/src/bt_condition_nodes/: ConditionNodeFrame.cpp  IsApproximationReached.cpp  IsBottleOnTable.cpp  IsQuestionnaireRequested.cpp  IsUserAnswered.cpp  IsUserDetected.cpp  IsUserEngaged.cpp  IsUserEngaging.cpp  IsUserSat.cpp  IsUserSeated.cpp  conditionNodeFrame.cpp
nhoa_msgs/: CMakeLists.txt  package.xml
nhoa_msgs/msg/: SmileScore.msg
