<?xml version="1.0"?>
<package format="2">
  <name>nhoa_bt</name>
  <version>0.4.10</version>
  <description>This package executes the NHoA's project BT</description>

  <maintainer email="oscar.palacin@eurecat.org">Oscar Palacin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>play_motion_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>pal_interaction_msgs</depend>

  <!-- test build depends -->
  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>position_controllers</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>

  <!-- build build depends -->
  <build_depend>behaviortree_cpp_v3</build_depend>


  <!-- exec build depends -->
  <exec_depend>behaviortree_cpp_v3</exec_depend> 


</package>
