<?xml version="1.0"?>
<package format="2">
  <name>nhoa_msgs</name>
  <version>0.0.0</version>
  <description>The nhoa_msgs package</description>

  <maintainer email="oscar.palacin@eurecat.org">Óscar Palacín</maintainer>

  <license>TBD</license>

  <author email="oscar.palacin@eurecat.org">Óscar Palacín</author>

  <depend>std_msgs</depend>
  <!-- <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend> 
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend> -->

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

<export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
